ajustes directorios home-test-video-banner.html y nota-test-video-banner.html

--- a/home-test-video-banner.html
+++ b/home-test-video-banner.html
@@ -249,10 +249,10 @@ if( !e.preventDefault() ){ e.returnValue = false; }});
 </style>
 
 <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-<script src="go.js"></script>
-<script src="utiles-coop-player-ads.js"></script>
-<script src="initHomeStiky.js"></script>
-<script src="coop-player-ads.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/go.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/utiles-coop-player-ads.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/initHomeStiky.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/coop-player-ads.js"></script>
 
 <!-- nuevo include source dfp 20190514-->
 <!-- PUBLICIDAD DFP IMPLEMENTACION PARES CLAVE VALOR -->
