--- a/nota-test-video-banner.html
+++ b/nota-test-video-banner.html
@@ -283,32 +283,14 @@ $('#nav-toggle').on('click', function() {this.classList.toggle('active');});
 </script>
 
 <!-- ARTICULO VIDEO NUEVO PLAYER -->
+
 <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-<script src="go.js"></script>
-<script src="utiles-coop-player-ads.js"></script>
-<script src="initInread.js"></script>
-<script src="coop-player-ads.js"></script>
-
-<!-- coop-player-ads -->
-<!-- <script src="https://gist.github.com/rvargassanhueza/3a6f8b32018fb1cd8865c06854d6da47.js"></script> -->
-
-<!-- go -->
-<!-- <script src="https://gist.github.com/rvargassanhueza/dd142d0c8d89a0a76e13bcf9d9c3f7de.js"></script> -->
-
-<!-- utiles-coop-player-ads -->
-<!-- <script src="https://gist.github.com/rvargassanhueza/a6541cac11ecbdb1e9649423b8977f3d.js"></script> -->
-
-<!-- initInread -->
-<!-- <script src="https://gist.github.com/rvargassanhueza/b1bb4739c28aae47938b5a62d564e776.js"></script> -->
-
-
-
+<script src="/noticias/stat/publicidad/codes/video-player-ads/go.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/utiles-coop-player-ads.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/initInread.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/coop-player-ads.js"></script>
 
 <!-- ARTICULO VIDEO NUEVO PLAYER -->
-
-
-
- 
 
 
 <!--PUBLICIDAD-->
