--- a/home-test-video-banner.html
+++ b/home-test-video-banner.html
@@ -230,7 +230,7 @@ if( !e.preventDefault() ){ e.returnValue = false; }});
 .contControlsVideo{width: 100%;height: 28px;bottom: 0px;position: absolute;}
 .contControlsVideo .buttonAudio{width: 28px;height: 28px;bottom: 0;background-image: url('/noticias/stat/includes/publicidad/img/iconos/Play_sonido-01.svg');float:right;display: none;background-repeat: no-repeat;margin: -5px 5px 0 0;cursor: pointer;}
 .contControlsVideo .buttonMute{width: 28px;height: 28px;bottom: 0;background-image: url('/noticias/stat/includes/publicidad/img/iconos/mute_mute__-01.svg');float:right;display: none;background-repeat: no-repeat;margin: -5px 5px 0 0;cursor: pointer;}
-.videoInReadWrapper{display: none;   
+.videoHomeStickyWrapper{display: none;   
    margin: 0 auto;
     position: fixed;
     bottom: 20px;
