--- a/m_nota_test_video_banner.html
+++ b/m_nota_test_video_banner.html
@@ -399,25 +399,25 @@ $("img").lazyload({placeholder : "http://especiales2.cooperativa.cl/2017/pruebas
 
 <!-- ARTICULO VIDEO NUEVO PLAYER -->
 <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-<script src="go.js"></script>
-<script src="utiles-coop-player-ads.js"></script>
-<script src="initInread.js"></script>
-<script src="coop-player-ads.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/go.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/utiles-coop-player-ads.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/initInread.js"></script>
+<script src="/noticias/stat/publicidad/codes/video-player-ads/coop-player-ads.js"></script>
 <!-- ARTICULO VIDEO NUEVO PLAYER -->
 
 <!--PUBLICIDAD-->
 <!--PUBLICIDAD PARES CLAVE-VALOR -->
 <script>
-var coop_dfp_region = "(none)";
-//var coop_dfp_vista = "movil";
-var coop_dfp_tipo = "articulo";
-var coop_dfp_seccion_1 = "Entretención";
-var coop_dfp_tema_1 = "Festivales";
-var coop_dfp_subtema_1 = "Lollapalooza";
-var coop_dfp_ts = "20180315164023";
+// var coop_dfp_region = "(none)";
+// //var coop_dfp_vista = "movil";
+// var coop_dfp_tipo = "articulo";
+// var coop_dfp_seccion_1 = "Entretención";
+// var coop_dfp_tema_1 = "Festivales";
+// var coop_dfp_subtema_1 = "Lollapalooza";
+// var coop_dfp_ts = "20180315164023";
 
-var sec_id_dfp,art_tema = "4";
-var fid_dfp,art_fid = "fid_noticia";
+// var sec_id_dfp,art_tema = "4";
+// var fid_dfp,art_fid = "fid_noticia";
 </script>
 
 <script async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
