requerimiento itt radio en vivo

--- a/itt_radio_en_vivo.html
+++ b/itt_radio_en_vivo.html
@@ -15,39 +15,26 @@
         <script src="https://janus.cooperativa.cl/cooperativa/js-local/jquery/jquery.js"></script>
         <script src="https://janus.cooperativa.cl/cooperativa/js-local/jquery-ui/jquery-ui.js"></script>
         <script src="https://janus.cooperativa.cl/cooperativa/js-local/html5.js"></script>
-        <!-- <script src="/cooperativa/js-local/Utiles.class.js"></script> -->
+        
+        <!-- <script src="/cooperativa/js-local/Utiles.class.js"></script> comentar o quitar -->
         <script src="//s0.2mdn.net/instream/html5/ima3.js"></script>
         <script src="https://janus.cooperativa.cl/cooperativa/js-local/prontusPlayerPreRoll/prontusPlayerPreRoll.min.js"></script>
         <!-- script defer src="https://www.provokers.cl/encuesta/4T2C_STERAMING.js"></script -->
 
         <script async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>    
-    
-        <script>  
-            window.googletag = window.googletag || {cmd: []};
-
-
-            googletag.cmd.push(function() {
-                googletag.defineSlot('/1020719/coop_d_990x90_01', [[990, 60], [728, 50], [728, 60], [728, 90], [728, 40], [990, 40], [990, 90], [990, 50]], 'div-gpt-ad-1461944375259-0').addService(googletag.pubads());
-                googletag.defineSlot('/1020719/coop_d_990x90_02', [[990, 60], [728, 50], [728, 60], [728, 90], [728, 40], [990, 40], [990, 90], [990, 50]], 'div-gpt-ad-1461944375259-1').addService(googletag.pubads());
-                googletag.defineSlot('/1020719/coop_d_120x600_01', [[120, 600], [160,600]], 'div-gpt-ad-1450149920562-9').addService(googletag.pubads());
-                googletag.defineSlot('/1020719/coop_d_120x600_02', [[120, 600], [160,600]], 'div-gpt-ad-1450149920562-11').addService(googletag.pubads());
-
-                var itt_tag = googletag.defineSlot('/1020719/coop_d_1x1', [1, 1], 'coop_d_1x1_1').addService(googletag.pubads()).setTargeting('coop_tipo', 'coop_radio_en_vivo');
-                googletag.pubads().enableSingleRequest();
-                googletag.pubads().collapseEmptyDivs();
-                googletag.pubads().enableSyncRendering();
-                googletag.enableServices();
-            });
-        </script>
+        <script src="https://www.cooperativa.cl/noticias/stat/publicidad/radio_en_vivo/esc_instancias.js"></script>
 
         <script  src="https://www.cooperativa.cl/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200403165239"></script>
     </head>
     <body>
+        <!-- agregar bloque itt -->
         <div id='coop_d_1x1_1' class="gam-bloque-itt">
             <script>
               googletag.cmd.push(function() { googletag.display('coop_d_1x1_1'); });
             </script>
         </div> 
+        <!-- /agregar bloque itt -->
+
 
         <div style="display: flex; margin: 0;">
         <div style="margin: auto;">
