agrego vista para formatos en paralelo en home coop

--- a/home-test-video-banner.html
+++ b/home-test-video-banner.html
@@ -119,6 +119,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="https://www.alairelibre.cl/noticias/css/cooperativa_2018/escritorio/modulo_aal.css">
 <!--MODULO AAL-->
 
+<!-- PUBLICIDAD VIDEO-PLAYER-ADS -->
+<link rel="stylesheet" href="/noticias/stat/publicidad/css/video-player-ads/esc_port_home_sticky.css">
+<!-- /PUBLICIDAD VIDEO-PLAYER-ADS -->
+
 <!--INSTAGRAM-->
 <link rel="stylesheet" href="/noticias/css/cooperativa_2018/escritorio/portada_instagram.css">
 <!--INSTAGRAM-->
@@ -217,36 +221,6 @@ if( !e.preventDefault() ){ e.returnValue = false; }});
 </script>  
 <!--MACRO(macro_publicidad_home_dfp.html)-->  
 
-<style>
-
-.ima-Home-Sticky {display: table;
-    /* background: yellowgreen; */
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 275px;
-    height: 155px;}
-#content_video {overflow: hidden;}
-.contControlsVideo{width: 100%;height: 28px;bottom: 0px;position: absolute;}
-.contControlsVideo .buttonAudio{width: 28px;height: 28px;bottom: 0;background-image: url('/noticias/stat/includes/publicidad/img/iconos/Play_sonido-01.svg');float:right;display: none;background-repeat: no-repeat;margin: -5px 5px 0 0;cursor: pointer;}
-.contControlsVideo .buttonMute{width: 28px;height: 28px;bottom: 0;background-image: url('/noticias/stat/includes/publicidad/img/iconos/mute_mute__-01.svg');float:right;display: none;background-repeat: no-repeat;margin: -5px 5px 0 0;cursor: pointer;}
-.videoHomeStickyWrapper{display: none;   
-   margin: 0 auto;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    /* background: red; */
-    z-index: 9999999;}
-.closeWrapper{width: 30px;
-    height: 28px;
-    position: absolute;
-    top: -188px;
-    right: 0;}
-.closeWrapper .contentClose{width: 30px;height: 28px;float: left;}
-.closeWrapper .contentCloseImg{width: 100%;height: 28px;background-image: url('/noticias/stat/includes/publicidad/img/iconos/Cerrar_cerrar___-01.svg');float: left;cursor: pointer;margin-top: -28px;background-repeat:no-repeat;}
-.contMiniPlayer{position: fixed !important;bottom: 20px;right: 20px;width: 350px !important ;height: 200px !important ;animation: fade-in-up .25s ease forwards !important;padding-bottom: 10px;z-index: 1;}
-.content-reproductor{position: relative;}
-</style>
 
 <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
 <script src="/noticias/stat/publicidad/codes/video-player-ads/go.js"></script>
