--- a/itt_radio_en_vivo.html
+++ b/itt_radio_en_vivo.html
@@ -24,7 +24,11 @@
         <script async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>    
         <script src="https://www.cooperativa.cl/noticias/stat/publicidad/radio_en_vivo/esc_instancias.js"></script>
 
-        <script  src="https://www.cooperativa.cl/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200403165239"></script>
+        <script  src="https://www.cooperativa.cl/noticias/stat/publicidad/includes/js/utiles.listen.class.js"></script>
+        <!-- <script  src="\noticias\stat\publicidad\codes\utiles\utiles.listen.class.js"></script> -->
+
+
+        
     </head>
     <body>
         <!-- agregar bloque itt -->
