--- a/nota-test-video-banner.html
+++ b/nota-test-video-banner.html
@@ -172,6 +172,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="/noticias/css/cooperativa_2018/escritorio/footer.css">
 <link rel="stylesheet" href="/noticias/css/cooperativa_2018/escritorio/articulo_coop.css">
 
+<link rel="stylesheet" href="/noticias/stat/publicidad/css/video-player-ads/esc_artic_inread.css">
+
 <link rel="stylesheet" href="//googleads.github.io/videojs-ima/node_modules/video.js/dist/video-js.min.css" />
 
 <link rel="stylesheet" href="//googleads.github.io/videojs-ima/node_modules/videojs-contrib-ads/dist/videojs.ads.css" />
