--- a/m_nota_test_video_banner.html
+++ b/m_nota_test_video_banner.html
@@ -179,8 +179,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css?v=2">
 <!--/ARTICULOS FOTOS-->
 
-
-
+<link rel="stylesheet" href="\noticias\stat\publicidad\css\css-video-player-ads\video-player-ads\mov_artic_inread.css">
 
 
 <script type="text/javascript" src="/js-local/sst8_3.js"></script><!-- SIMPLESTATS SST8-->
@@ -512,7 +511,7 @@ googletag.pubads().enableLazyLoad();
 googletag.pubads().addEventListener('slotRenderEnded', function (event) {
         console.info("slot renderizados: ",event.slot.getSlotElementId())
     });
-    go('https://pubads.g.doubleclick.net/gampad/ads?iu=/1020719/coop_m_preroll_inread&description_url=http%3A%2F%2Fwww.cooperativa.cl&tfcd=0&npa=0&sz=640x360&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=',arraySeccion, arrayTem, arrayStem)
+    // go('https://pubads.g.doubleclick.net/gampad/ads?iu=/1020719/coop_m_preroll_inread&description_url=http%3A%2F%2Fwww.cooperativa.cl&tfcd=0&npa=0&sz=640x360&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=',arraySeccion, arrayTem, arrayStem)
 });
 
 var nextSlotId=1;
@@ -634,7 +633,9 @@ function getCleanedString(cadena){
 <!--/PUBLICIDAD PARES CLAVE-VALOR -->
 
 
-<script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js"></script>
+<!-- <script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js"></script> -->
+
+<script src="\noticias\stat\publicidad\codes\utiles\utiles.listen.class.js"></script>
 
 <!--/PUBLICIDAD-->
 <!-- Endless Scroll -->
