--- a/nota-test-video-banner.html
+++ b/nota-test-video-banner.html
@@ -172,7 +172,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="/noticias/css/cooperativa_2018/escritorio/footer.css">
 <link rel="stylesheet" href="/noticias/css/cooperativa_2018/escritorio/articulo_coop.css">
 
-<link rel="stylesheet" href="/noticias/stat/publicidad/css/video-player-ads/esc_artic_inread.css">
+<link rel="stylesheet" href="\noticias\stat\publicidad\css\css-video-player-ads\video-player-ads\esc_artic_inread.css">
 
 <link rel="stylesheet" href="//googleads.github.io/videojs-ima/node_modules/video.js/dist/video-js.min.css" />
 
@@ -422,7 +422,7 @@ googletag.pubads().addEventListener('slotRenderEnded', function (event) {
 		
 	});
 
-	go('https://pubads.g.doubleclick.net/gampad/ads?iu=/1020719/coop_d_preroll_inread&description_url=https%3A%2F%2Fwww.cooperativa.cl%2F&tfcd=0&npa=0&sz=640x360&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=',arraySeccion, arrayTem, arrayStem);  
+	
 
 });
 
@@ -526,7 +526,8 @@ $(function(){
 
 <!-- GOOGLE DFP -->
 <!-- nuevo include source dfp 20190618-->
-<script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200312144213"></script>
+<!-- <script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200312144213"></script> -->
+<script src="\noticias\stat\publicidad\codes\utiles\utiles.listen.class.js"></script>
 <!--/PUBLICIDAD-->
 
 
