--- a/old-itt-video-banner.html
+++ b/old-itt-video-banner.html
@@ -246,34 +246,34 @@ if( !e.preventDefault() ){ e.returnValue = false; }});
     //var itt_tag=googletag.defineOutOfPageSlot('/1020719/coop_d_itt', 'coop_d_itt_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_itt');
     var itt_tag = googletag.defineSlot('/1020719/coop_d_1x1', [1, 1], 'coop_d_1x1_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_itt');
 
-    // var footer_tag = googletag.defineOutOfPageSlot('/1020719/coop_d_footer', 'coop_d_footer_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_footer');
-    var footer_tag = googletag.defineSlot('/1020719/coop_d_1x1_footer',[1, 1], 'coop_d_footer_1x1_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_footer');
+    // // var footer_tag = googletag.defineOutOfPageSlot('/1020719/coop_d_footer', 'coop_d_footer_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_footer');
+    // var footer_tag = googletag.defineSlot('/1020719/coop_d_1x1_footer',[1, 1], 'coop_d_footer_1x1_1').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_footer');
 
-    var top1 = googletag.defineSlot('/1020719/coop_d_990x90_01', [[728, 90], [990, 90], [1100, 90], [1178, 90], [728, 150], [990, 150], [1100, 150], [1178, 150], [728, 200], [990, 200], [1100, 200], [1178, 200]], 'div-gpt-ad-1530907428377-2').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_01').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_02', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-3').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_02').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_03', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-4').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_03').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_04', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-5').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_04').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_05', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-6').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_05').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_06', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-7').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_06').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_990x90_07', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-8').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_07').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_728x90_01', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-9').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_01').setCollapseEmptyDiv(true);
-    //googletag.defineSlot('/1020719/coop_d_728x90_02', [[728, 60], [650, 40], [728, 40], [650, 60]], 'div-gpt-ad-1530907428377-10').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_02');
-    googletag.defineSlot('/1020719/coop_d_728x90_03', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-11').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_03').setCollapseEmptyDiv(true);
-    //googletag.defineSlot('/1020719/coop_d_728x90_04', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-12').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_04');
-    //googletag.defineSlot('/1020719/coop_d_728x90_05', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-13').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_05');
-    googletag.defineSlot('/1020719/coop_d_250x90_01', [250, 90], 'div-gpt-ad-1530907428377-14').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_250x90_01').setCollapseEmptyDiv(true);
-    //googletag.defineSlot('/1020719/coop_d_450x250_01', [450, 250], 'div-gpt-ad-1530907428377-15').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_450x250_01');
-    //googletag.defineSlot('/1020719/coop_d_300x600_01', [[300, 250], [300, 600]], 'div-gpt-ad-1530907428377-16').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x600_01');
-    googletag.defineSlot('/1020719/coop_d_990x60_01', [[728, 40], [728, 50], [728, 60], [990, 40], [990, 50], [990, 60], [1178, 40], [1178, 50], [1178, 60]], 'div-gpt-ad-1530907428377-17').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x60_01').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_01', [[300, 250], [300, 400], [300, 450], [300, 600]], 'div-gpt-ad-1530907428377-18').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_01').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_02', [300, 250], 'div-gpt-ad-1530907428377-19').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_02').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_03', [300, 250], 'div-gpt-ad-1530907428377-20').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_03').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_04', [300, 250], 'div-gpt-ad-1530907428377-21').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_04').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_05', [300, 250], 'div-gpt-ad-1530907428377-22').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_05').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_06', [300, 250], 'div-gpt-ad-1530907428377-23').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_06').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_300x250_07', [300, 250], 'div-gpt-ad-1530907428377-24').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_07').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_120x600_01', [[120, 600], [160, 600]], 'div-gpt-ad-1530907428377-25').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_120x600_01').setCollapseEmptyDiv(true);
-    googletag.defineSlot('/1020719/coop_d_modulo_01',[990,90],'coop_d_modulo_01_1').addService(googletag.pubads()).setCollapseEmptyDiv(true);
+    // var top1 = googletag.defineSlot('/1020719/coop_d_990x90_01', [[728, 90], [990, 90], [1100, 90], [1178, 90], [728, 150], [990, 150], [1100, 150], [1178, 150], [728, 200], [990, 200], [1100, 200], [1178, 200]], 'div-gpt-ad-1530907428377-2').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_01').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_02', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-3').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_02').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_03', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-4').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_03').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_04', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-5').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_04').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_05', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-6').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_05').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_06', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-7').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_06').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_990x90_07', [[728, 90], [990, 90]], 'div-gpt-ad-1530907428377-8').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x90_07').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_728x90_01', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-9').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_01').setCollapseEmptyDiv(true);
+    // //googletag.defineSlot('/1020719/coop_d_728x90_02', [[728, 60], [650, 40], [728, 40], [650, 60]], 'div-gpt-ad-1530907428377-10').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_02');
+    // googletag.defineSlot('/1020719/coop_d_728x90_03', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-11').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_03').setCollapseEmptyDiv(true);
+    // //googletag.defineSlot('/1020719/coop_d_728x90_04', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-12').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_04');
+    // //googletag.defineSlot('/1020719/coop_d_728x90_05', [[650, 90], [728, 60], [650, 40], [650, 60], [728, 90]], 'div-gpt-ad-1530907428377-13').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_728x90_05');
+    // googletag.defineSlot('/1020719/coop_d_250x90_01', [250, 90], 'div-gpt-ad-1530907428377-14').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_250x90_01').setCollapseEmptyDiv(true);
+    // //googletag.defineSlot('/1020719/coop_d_450x250_01', [450, 250], 'div-gpt-ad-1530907428377-15').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_450x250_01');
+    // //googletag.defineSlot('/1020719/coop_d_300x600_01', [[300, 250], [300, 600]], 'div-gpt-ad-1530907428377-16').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x600_01');
+    // googletag.defineSlot('/1020719/coop_d_990x60_01', [[728, 40], [728, 50], [728, 60], [990, 40], [990, 50], [990, 60], [1178, 40], [1178, 50], [1178, 60]], 'div-gpt-ad-1530907428377-17').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_990x60_01').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_01', [[300, 250], [300, 400], [300, 450], [300, 600]], 'div-gpt-ad-1530907428377-18').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_01').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_02', [300, 250], 'div-gpt-ad-1530907428377-19').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_02').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_03', [300, 250], 'div-gpt-ad-1530907428377-20').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_03').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_04', [300, 250], 'div-gpt-ad-1530907428377-21').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_04').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_05', [300, 250], 'div-gpt-ad-1530907428377-22').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_05').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_06', [300, 250], 'div-gpt-ad-1530907428377-23').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_06').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_300x250_07', [300, 250], 'div-gpt-ad-1530907428377-24').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_300x250_07').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_120x600_01', [[120, 600], [160, 600]], 'div-gpt-ad-1530907428377-25').addService(googletag.pubads()).setTargeting('coop_bloque', 'coop_d_120x600_01').setCollapseEmptyDiv(true);
+    // googletag.defineSlot('/1020719/coop_d_modulo_01',[990,90],'coop_d_modulo_01_1').addService(googletag.pubads()).setCollapseEmptyDiv(true);
 
     //googletag.pubads().setTargeting('coop_region',coop_dfp_region);
     //googletag.pubads().setTargeting('coop_vista', coop_dfp_vista);
@@ -292,13 +292,14 @@ if( !e.preventDefault() ){ e.returnValue = false; }});
     googletag.pubads().addEventListener('slotRenderEnded', function (event) {
         console.info("slot renderizados: ",event.slot.getSlotElementId())
     });
-    go('https://pubads.g.doubleclick.net/gampad/ads?iu=/1020719/coop_d_preroll_home_stiky&description_url=http%3A%2F%2Fwww.cooperativa.cl&tfcd=0&npa=0&sz=400x300&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=',[null], [null], [null]); 
+    // go('https://pubads.g.doubleclick.net/gampad/ads?iu=/1020719/coop_d_preroll_home_stiky&description_url=http%3A%2F%2Fwww.cooperativa.cl&tfcd=0&npa=0&sz=400x300&gdfp_req=1&output=vast&unviewed_position_start=1&env=vp&impl=s&correlator=',[null], [null], [null]); 
     });
 
     
     </script>
     <!-- /PUBLICIDAD DFP IMPLEMENTACION PARES CLAVE VALOR -->
-<script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200330182650"></script>
+<!-- <script  src="/noticias/stat/publicidad/includes/js/utiles.listen.class.js?id=20200330182650"></script> -->
+<script src="\noticias\stat\publicidad\codes\utiles\utiles.listen.class.js"></script>
 
 <!-- SIMPLE STATS SST8 PRONTUS HOME -->
 <script type="text/javascript" src="/js-local/sst8_3.js"></script>
