--- a/creatividad-Newitt-esc.html
+++ b/creatividad-Newitt-esc.html
@@ -1,6 +1,6 @@
 <!-- 925x520 IMAGEN JS -->
 
-<!-- __ι__ι__ι__ι__ι__ TAG DE IMPRESIONES __ι__ι__ι__ι__ι__  -->
+<!-- __ι__ι__ι__ι__ι__ TAG DE IMPRESIONES __ι__ι__ι__ι__ι__  * -->
 <IMG SRC="________________" BORDER="0" HEIGHT="1" WIDTH="1" ALT="Advertisement" style="position:absolute; z-index:-10; top:-999em;">
 <!-- __ι__ι__ι__ι__ι__ /TAG DE IMPRESIONES __ι__ι__ι__ι__ι__ -->
 
